# ifyoureallyknewme

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.yaml  config_ollama.yaml  example.config.yaml  knowme.py  pyproject.toml  qa_template.md  questions.csv  regen_embeddings.py  schema.sql  tutorial.md
core/: __init__.py  analysis.py  config.py  consensus.py  database.py  embedding.py  ingest.py  llm_calling.py  load.py  profile.py  query.py  utils.py
core/mcp/: coverage_reort.md  coverage_report.md  question_server.py  requirements.txt
mcp/: BookOfQuestions.txt  Role-Interviewer-mcp.md  coverage_reort.txt  domain-questions.csv  knowme_mcp_server.py  question_server.py  test_server.py
reference/: domain_questions.csv  reset_consensus.sql  rubric1.md  telos-chatgpt-prompt.md  telos_questions.csv  tutorial-remote-ollama-profile.md  tutorial.md
roles/: Prompt-Schema.md  Role-AgentProfile.md  Role-BehavioralEconomist.md  Role-CollaboratorProfile.md  Role-ConsensusMaker.md  Role-CoverageAssesor.md  Role-Demographer.md  Role-FactExtractor.md  Role-Interviewer-mcp,md  Role-Interviewer-mcp.md  Role-Interviewer.md  Role-KeywordExtractor.md  Role-PoliticalScientist.md  Role-ProfileGenerator.md  Role-Psychologist.md  Role-TELOSAssessor.md
tests/: conftest.py  test_cli.py
