[project]
name = "knowme"
version = "0.2.0"
description = "Personal knowledge management and analysis system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "loaden>=0.1",
    "llm>=0.23",
    "numpy>=2.0",
    "openai>=1.0",
    "rich>=13.0",
    "scipy>=1.15",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
knowme = "knowme:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 95
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "C4", "SIM", "RUF"]
ignore = ["S608"]  # SQL injection - we use parameterized queries

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is fine in tests

[tool.ruff.format]
quote-style = "double"
